--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-dom": "^17.0.2",
     "react-flow-renderer": "^9.7.0",
     "react-icons": "^4.3.1",
+    "react-particles-js": "^3.6.0",
     "react-scripts": "4.0.3",
+    "react-tsparticles": "^1.37.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
